<resources>

    <string name="app_name">Pós Covid</string>
    <string name="bem_vindo">Bem-vindo</string>
    <string name="bem_vindo_detalhes">Bem vindo ao Pós Covid, você precisa ter um cadastro para ter acesso a todas as nossas funções.</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="entrar">Entrar</string>
    <string name="programa_pos_covid">Programa \nPós-Covid</string>
    <string name="entrar_negrito"><b>Entrar</b></string>
    <string name="esqueci_minha_senha"><u>Esqueceu sua senha?\nclique aqui</u></string>
    <string name="senha_negrito"><b>Senha</b></string>
    <string name="email_negrito"><b>E-mail</b></string>
    <string name="nome_negrito"><b>Nome completo</b></string>
    <string name="cadastrar_negrito"><b>Cadastrar</b></string>
    <string name="recuperar_senha_negrito"><b>Recuperar Senha</b></string>
    <string name="alterar_senha_negrito"><b>Alterar Senha</b></string>
    <string name="nova_senha_negrito"><b>Nova senha</b></string>
    <string name="confirmar_nova_senha_negrito"><b>Confirme a nova senha</b></string>
    <string name="condigo_de_verificacao_negrito"><b>Código de verificação</b></string>
    <string name="noticias">Noticias</string>
    <string name="estudos">Estudos</string>
    <string name="contaminacao">Contaminação</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Amanda</string>
    <string name="nav_header_subtitle">amanda@hotmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="notificacoes">Notificações</string>
    <string name="sair">Sair</string>
    <string name="covid_no_mundo">Covid no mundo</string>
    <string name="ultimos_estudos">Últimos estudos</string>
    <string name="espa_o_sa_de_mental">Espaço - Saúde mental</string>
    <string name="aceessar_area_paciente">Acessar área do Paciente</string>
    <string name="acessar_area_psicologo">Acessar área do Psicologo</string>
    <string name="erro_padrao_api_get">Descuple, não conseguimos buscas os dados no momento, por favor, tente novamente mais tarde.</string>
    <string name="estados">Estados</string>
    <string name="link_estudo"><u>Acesse a noticia completa aqui</u></string>
    <string name="estudo">Estudo</string>
    <string name="agenda">Agendamentos</string>
    <string name="login">Login</string>
    <string name="nome_completo">Nome completo</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="crp">CRP</string>
    <string name="resumo_profissional">Resumo profissional</string>
    <string name="especializacao">Especialização</string>
    <string name="enviar">Enviar</string>
    <string name="cadastrar_psicologo">Cadastrar psicólogo</string>
    <string name="cadastrar_psicologo_dados_enviados">Seus dados foram enviados para avaliação e em breve você receberá um retorno</string>
    <string name="confirmar_senha_negrito"><b>Confirmar senha</b></string>
    <string name="erro_padrao_api">Desculpe, tente novamente mais tarde</string>
    <string name="horarios_agendados">Horários agendados</string>
    <string name="seleciona_psicologo">Seleciona um psicólogo</string>
    <string name="horarios_disponiveis_para_o_dia">Horários disponíveis</string>
    <string name="agendar_sessao">Agendar sessão</string>
    <string name="horarios_cadastrados">Horários cadastrados</string>
    <string name="titulo_agendamento">Sessão com %s</string>
    <string name="editar_horario">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="mensagem_agenda_vazia">Você não possui sessões agendadas</string>
    <string name="area_psicologo">Área do psicólogo</string>
    <string name="horarios_cadastrados_disponiveis">Horários cadastrados disponíveis</string>
    <string name="salvar">Salvar alterações</string>
    <string name="adicionar_horário">Incluir horário</string>
    <string name="psicologo_sem_horario_para_o_dia">Psicologo não possui horário dísponivel para esse dia</string>
    <string name="confirmar_sessao">Confirmar</string>

</resources>