<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/cadastrar_psicologo_nome"
        style="@style/LoginEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="40dp"
        android:hint="@string/nome_completo"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/cadastrar_psicologo_nascimento"
        style="@style/LoginEditText"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:hint="@string/data_de_nascimento"
        android:inputType="text"
        android:maxLength="25"
        app:layout_constraintEnd_toEndOf="@id/cadastrar_psicologo_nome"
        app:layout_constraintStart_toStartOf="@id/cadastrar_psicologo_nome"
        app:layout_constraintTop_toBottomOf="@id/cadastrar_psicologo_nome" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/cadastrar_psicologo_crp"
        style="@style/LoginEditText"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:hint="@string/crp"
        android:maxLength="25"
        app:layout_constraintEnd_toEndOf="@id/cadastrar_psicologo_nome"
        app:layout_constraintStart_toStartOf="@id/cadastrar_psicologo_nome"
        app:layout_constraintTop_toBottomOf="@id/cadastrar_psicologo_nascimento" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/cadastrar_psicologo_resumo"
        style="@style/LoginEditText"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:hint="@string/resumo_profissional"
        app:layout_constraintEnd_toEndOf="@id/cadastrar_psicologo_nome"
        app:layout_constraintStart_toStartOf="@id/cadastrar_psicologo_nome"
        app:layout_constraintTop_toBottomOf="@id/cadastrar_psicologo_crp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/cadastrar_psicologo_especializacao"
        style="@style/LoginEditText"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:hint="@string/especializacao"
        android:maxLength="25"
        app:layout_constraintEnd_toEndOf="@id/cadastrar_psicologo_nome"
        app:layout_constraintStart_toStartOf="@id/cadastrar_psicologo_nome"
        app:layout_constraintTop_toBottomOf="@id/cadastrar_psicologo_resumo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cadastrar_psicologo_confirmar"
        style="@style/AppButtonPrimary"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginHorizontal="90dp"
        android:layout_marginTop="28dp"
        android:enabled="false"
        android:text="@string/enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cadastrar_psicologo_especializacao" />

</androidx.constraintlayout.widget.ConstraintLayout>