<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/background_login" />

    <TextView
        android:id="@+id/app_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:text="@string/programa_pos_covid"
        android:textColor="@color/colorPrimaryVariant"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/image_virus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name_textView" />

    <TextView
        android:id="@+id/bem_vindo_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/bem_vindo"
        android:textColor="@color/colorPrimaryVariant"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bem_vindo_mensagem_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/bem_vindo_mensagem_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="35dp"
        android:gravity="center"
        android:text="@string/bem_vindo_detalhes"
        android:textColor="#9AA5B1"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bem_vindo_cadastre_se"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bem_vindo_cadastre_se"
        style="@style/AppButtonPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:gravity="center"
        android:text="@string/cadastre_se"
        app:layout_constraintBottom_toTopOf="@id/bem_vindo_entrar"
        app:layout_constraintEnd_toEndOf="@id/bem_vindo_entrar"
        app:layout_constraintStart_toStartOf="@id/bem_vindo_entrar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bem_vindo_entrar"
        style="@style/AppButtonSecondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/background_botao_secundario"
        android:gravity="center"
        android:text="@string/entrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>