<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/background_login" />

    <TextView
        android:id="@+id/cadastrar_login_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:text="@string/programa_pos_covid"
        android:textColor="@color/colorPrimaryVariant"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cadastrar_login_covid_imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/image_virus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cadastrar_login_name_textView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/cadastrar_login_email"
        style="@style/LoginEditText"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="40dp"
        android:hint="@string/email_negrito"
        android:inputType="textEmailAddress"
        android:maxLength="25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cadastrar_login_covid_imageView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/cadastrar_login_senha"
        style="@style/LoginEditText"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:hint="@string/senha_negrito"
        android:inputType="textPassword"
        android:maxLength="25"
        app:layout_constraintEnd_toEndOf="@id/cadastrar_login_email"
        app:layout_constraintStart_toStartOf="@id/cadastrar_login_email"
        app:layout_constraintTop_toBottomOf="@id/cadastrar_login_email" />

    <ImageView
        android:id="@+id/cadastrar_login_mostra_senha"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="8dp"
        app:layout_constraintBottom_toBottomOf="@id/cadastrar_login_senha"
        app:layout_constraintEnd_toEndOf="@id/cadastrar_login_senha"
        app:layout_constraintTop_toTopOf="@id/cadastrar_login_senha"
        app:srcCompat="@drawable/ic_olho_cortado" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/cadastrar_login_senha_confirmar"
        style="@style/LoginEditText"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:hint="@string/confirmar_senha_negrito"
        android:inputType="textPassword"
        android:maxLength="25"
        app:layout_constraintEnd_toEndOf="@id/cadastrar_login_senha"
        app:layout_constraintStart_toStartOf="@id/cadastrar_login_senha"
        app:layout_constraintTop_toBottomOf="@id/cadastrar_login_senha" />

    <ImageView
        android:id="@+id/cadastrar_login_mostra_senha_confirmar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="8dp"
        app:layout_constraintBottom_toBottomOf="@id/cadastrar_login_senha_confirmar"
        app:layout_constraintEnd_toEndOf="@id/cadastrar_login_senha_confirmar"
        app:layout_constraintTop_toTopOf="@id/cadastrar_login_senha_confirmar"
        app:srcCompat="@drawable/ic_olho_cortado" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cadasrar_confirmar"
        style="@style/AppButtonPrimary"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginHorizontal="90dp"
        android:layout_marginTop="28dp"
        android:enabled="false"
        android:text="@string/cadastrar_negrito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cadastrar_login_senha_confirmar" />

    <ProgressBar
        android:id="@+id/cadastrar_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        android:indeterminateTint="@color/colorPrimaryVariant"
        android:indeterminateTintMode="src_atop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>