<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/background_login" />

    <TextView
        android:id="@+id/recuperar_senha_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:text="@string/programa_pos_covid"
        android:textColor="@color/colorPrimaryVariant"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/recuperar_senha_covid_imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/image_virus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recuperar_senha_name_textView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/recuperar_senha_email"
        style="@style/LoginEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="40dp"
        android:hint="@string/email_negrito"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recuperar_senha_covid_imageView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/recuperar_senha_button"
        style="@style/AppButtonPrimary"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:enabled="false"
        android:text="@string/recuperar_senha_negrito"
        app:layout_constraintEnd_toEndOf="@id/recuperar_senha_email"
        app:layout_constraintStart_toStartOf="@id/recuperar_senha_email"
        app:layout_constraintTop_toBottomOf="@id/recuperar_senha_email" />

    <ProgressBar
        android:id="@+id/recuperar_senha_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimaryVariant"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>